# Forms

./: Cargo.toml  Procfile  README.md  sailfish.yml
.github/workflows/: linux.yml
migrations/: responses-down.sql  responses-up.sql
src/: data.rs  error.rs  form.rs  main.rs  routes.rs  test.rs
static/: index.js  main.css  signup.js
templates/: 404.stpl  error.stpl  form.stpl  response-saved.stpl  socials.stpl
