[package]
name = "forms"
version = "0.1.0"
authors = ["realaravinth <realaravinth@batsense.net>"]
edition = "2018"
default-run = "forms"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "forms"
path = "./src/main.rs"

[[bin]]
name = "test-util"
path = "./src/test.rs"

[dependencies]
actix-web = "3.3.2"
actix-files = "0.4"
actix-rt = "1"
sailfish = "0.2"
sailfish-macros = "0.2"

sqlx = { version = "0.4.0", features = [ "runtime-actix-rustls", "postgres" ] }

serde = "1"
serde_json = "1"
uuid = { version = "0.8", features = ["serde", "v4"] }

validator = "0.12"
validator_derive = "0.12"

pretty_env_logger = "0.4.0"
log = "0.4.11"
thiserror = "1"
ammonia = "3"

clap = "2.33"

[dev-dependencies]
serde_urlencoded = "0.7"
